kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kaktus
  name: kaktus-search
spec:
  selector:
    app: kaktus-search
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
